--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ button:active {
 </style>
 </head>
 <body>
-<script src="js/three.min.js" ></script>
-<script src="js/tween.min.js" ></script>
-<script src="js/TrackballControls.js" ></script>
-<script src="js/CSS3DRenderer.js" ></script>
+<script src="./three.min.js" ></script>
+<script src="./tween.min.js" ></script>
+<script src="./TrackballControls.js" ></script>
+<script src="./CSS3DRenderer.js" ></script>
 
 <div id="container"></div>
 <div id="info">3D-元素周期表</div>
